algosight and penguin 2.1 test

--- a/algosight.html
+++ b/algosight.html
@@ -472,7 +472,7 @@ initDataTables();
 	<script src="src/models/legend.js"></script>
 	<script src="src/models/axis.js"></script>
 	<script src="src/models/linePlusBarChart.js"></script>
-	<script src="src/models/linePlusBarWithFocusChart.js"></script>
+	<script src="src/models/lineChart.js"></script>
 	<script src="src/models/multiBarHorizontal.js"></script>
 	<script src="src/models/multiBarHorizontalChart.js"></script>
 	<script src="assets/js/stream_layers.js"></script>
@@ -501,7 +501,7 @@ d3.json(trafficFile, function(data) {
 
 	var chart;
 	nv.addGraph(function() {
-	    chart = nv.models.linePlusBarChart()
+	    chart = nv.models.lineChart()
 	        .margin({top: 30, right: 60, bottom: 50, left: 70})
 	        .x(function(d,i) { return i })
 	        .color(d3.scale.category10().range());
@@ -512,11 +512,12 @@ d3.json(trafficFile, function(data) {
 	      })
 	      .showMaxMin(false);
 
-		  chart.y1Axis
+		  chart.yAxis
+		  .axisLabel('Daily pagevisits')
 		  .tickFormat(d3.format(',f'));
 
-		  chart.y2Axis
-		  .tickFormat(d3.format(',f'));
+		  // chart.y2Axis
+	  // 		  .tickFormat(d3.format(',f'));
 			
 		  // chart.y3Axis
 		  // .tickFormat(d3.format(',f'));
@@ -524,12 +525,12 @@ d3.json(trafficFile, function(data) {
 		  // chart.y4Axis
 		  // .tickFormat(d3.format(',f'));
 
-	    chart.bars.forceY([0]).padData(false);
+	    // chart.bars.forceY([0]).padData(false);
 	    // chart.lines.forceY([0]);
 
 	    d3.select('#chart1 svg')
 	        .datum(testdata)
-	      .transition().duration(500).call(chart);
+	      .transition().duration(250).call(chart);
 
 	    nv.utils.windowResize(chart.update);
 
