--- a/algosight.html
+++ b/algosight.html
@@ -484,11 +484,12 @@ initDataTables();
 var changeName = "penguin21"
 var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
 var trafficFile = "/json/algosight/traffic/traffic_" + websiteName + "_"+ changeName + ".json";
+var CPFile = "/json/algosight/traffic/CP_" + websiteName + "_"+ changeName + ".json";
 // var trafficFile = "/json/algosight/traffic/test.json";
 
 d3.json(trafficFile, function(data) {
 
-	var testdata = data.map(function(series) {
+	var trafficData = data.map(function(series) {
 		series.values = series.values.map(function(d) { 
 			return {
 			x: (d[0]-719529)*86400*1000, // converting from Matlab format
@@ -507,7 +508,7 @@ d3.json(trafficFile, function(data) {
 	        .color(d3.scale.category10().range());
 
 	    chart.xAxis.tickFormat(function(d) {
-	      var dx = testdata[0].values[d] && testdata[0].values[d].x || 0;
+	      var dx = trafficData[0].values[d] && trafficData[0].values[d].x || 0;
 	      return dx ? d3.time.format('%x')(new Date(dx)) : '';
 	      })
 	      .showMaxMin(false);
@@ -529,7 +530,62 @@ d3.json(trafficFile, function(data) {
 	    // chart.lines.forceY([0]);
 
 	    d3.select('#chart1 svg')
-	        .datum(testdata)
+	        .datum(trafficData)
+	      .transition().duration(250).call(chart);
+
+	    nv.utils.windowResize(chart.update);
+
+	    chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
+
+	    return chart;
+	});
+});
+
+
+d3.json(CPFile, function(data) {
+
+	var CPdata = data.map(function(series) {
+		series.values = series.values.map(function(d) { 
+			return {
+			x: (d[0]-719529)*86400*1000, // converting from Matlab format
+			y: d[1] 
+		} 
+	});
+		return series;
+	});
+
+
+	var chart;
+	nv.addGraph(function() {
+	    chart = nv.models.lineChart()
+	        .margin({top: 30, right: 60, bottom: 50, left: 70})
+	        .x(function(d,i) { return i })
+	        .color(d3.scale.category10().range());
+
+	    chart.xAxis.tickFormat(function(d) {
+	      var dx = CPdata[0].values[d] && CPdata[0].values[d].x || 0;
+	      return dx ? d3.time.format('%x')(new Date(dx)) : '';
+	      })
+	      .showMaxMin(false);
+
+		  chart.yAxis
+		  .axisLabel('Daily pagevisits')
+		  .tickFormat(d3.format(',f'));
+
+		  // chart.y2Axis
+	  // 		  .tickFormat(d3.format(',f'));
+			
+		  // chart.y3Axis
+		  // .tickFormat(d3.format(',f'));
+		  // 				
+		  // chart.y4Axis
+		  // .tickFormat(d3.format(',f'));
+
+	    // chart.bars.forceY([0]).padData(false);
+	    // chart.lines.forceY([0]);
+
+	    d3.select('#chart2 svg')
+	        .datum(CPdata)
 	      .transition().duration(250).call(chart);
 
 	    nv.utils.windowResize(chart.update);
@@ -661,6 +717,12 @@ redrawGraph = function(file) {
 
 
 		<hr>
+		
+		<div id="chart2" class='with-3d-shadow with-transitions'>
+			<svg></svg>
+		</div>
+		
+		
 		<div class = "well">
 	  
 			<h2>Onsite pages summary</h2>
