--- a/algosight.html
+++ b/algosight.html
@@ -482,7 +482,7 @@ initDataTables();
 
 
 var changeName = "penguin21"
-var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
+var topLevelFile = "/json/algosight/toplevel/toplevel_" + websiteName + ".json";
 var trafficFile = "/json/algosight/traffic/traffic_" + websiteName + "_"+ changeName + ".json";
 var CPFile = "/json/algosight/traffic/CP_" + websiteName + "_"+ changeName + ".json";
 // var trafficFile = "/json/algosight/traffic/test.json";
@@ -531,61 +531,6 @@ d3.json(trafficFile, function(data) {
 
 	    d3.select('#chart1 svg')
 	        .datum(trafficData)
-	      .transition().duration(250).call(chart);
-
-	    nv.utils.windowResize(chart.update);
-
-	    chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
-
-	    return chart;
-	});
-});
-
-
-d3.json(CPFile, function(data) {
-
-	var CPdata = data.map(function(series) {
-		series.values = series.values.map(function(d) { 
-			return {
-			x: (d[0]-719529)*86400*1000, // converting from Matlab format
-			y: d[1] 
-		} 
-	});
-		return series;
-	});
-
-
-	var chart;
-	nv.addGraph(function() {
-	    chart = nv.models.lineChart()
-	        .margin({top: 30, right: 60, bottom: 50, left: 70})
-	        .x(function(d,i) { return i })
-	        .color(d3.scale.category10().range());
-
-	    chart.xAxis.tickFormat(function(d) {
-	      var dx = CPdata[0].values[d] && CPdata[0].values[d].x || 0;
-	      return dx ? d3.time.format('%x')(new Date(dx)) : '';
-	      })
-	      .showMaxMin(false);
-
-		  chart.yAxis
-		  .axisLabel('Daily pagevisits')
-		  .tickFormat(d3.format(',f'));
-
-		  // chart.y2Axis
-	  // 		  .tickFormat(d3.format(',f'));
-			
-		  // chart.y3Axis
-		  // .tickFormat(d3.format(',f'));
-		  // 				
-		  // chart.y4Axis
-		  // .tickFormat(d3.format(',f'));
-
-	    // chart.bars.forceY([0]).padData(false);
-	    // chart.lines.forceY([0]);
-
-	    d3.select('#chart2 svg')
-	        .datum(CPdata)
 	      .transition().duration(250).call(chart);
 
 	    nv.utils.windowResize(chart.update);
