--- a/statseo.html
+++ b/statseo.html
@@ -184,8 +184,7 @@ text {
 /* Global vars */
 var websiteURL = "www.leighmans.com";
 var websiteSplit = websiteURL.split(".");
-
-var websiteName = delineate(text);
+var websiteName = websiteSplit[1];
 
 
 $.fn.dataTableExt.oApi.fnReloadAjax = function ( oSettings, sNewSource, fnCallback, bStandingRedraw )
