follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -143,14 +143,8 @@
 		// theright = str.lastIndexOf("&");
 		return(str.substring(theleft));
 	}
-	// document.write("First Name is " +delineate(text));
+	 document.write("Domain is :" +delineate(text));
 
-
-	</script>
-
-	
-
-<script>
 
 
 /* Global vars */
