follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -985,7 +985,9 @@ rel="stylesheet" type="text/css">
           <h1>StatSEO: Onsite drilldown</h1>
         </div>
       </div> 
-
+	  <script>
+	  document.write("Website name is " +delineate(text));
+	  </script>
       <div class="row-fluid subheading">
 		  <div class="span12">
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
