follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -135,7 +135,7 @@
 
 	<script>
 
-	var locate = window.location
+	var locate = "http://ec2-54-216-68-172.eu-west-1.compute.amazonaws.com:8080/onsite_SQ_drilldown.html?websiteName=leighmans"
 	
 	document.joe.burns.value = locate
 
