follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -138,14 +138,15 @@
 	// document.joe.burns.value = locate;
 	// 
 	// var text = document.joe.burns.value;
-    alert(locate);
+    // alert(locate);
+	
 	function delineate2(str){
 
 		point = str.lastIndexOf("=");
 
 		return(str.substring(point+1,str.length));
 	}
-	document.write("Last Name is " +delineate2(text));
+	document.write("Last Name is " +delineate2(locate));
 	alert(delineate2(locate));
 
 	 </script>
