follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -135,8 +135,8 @@
 
 	var locate = window.location;
 	
-	document.joe.burns.value = locate;
-	var text = document.joe.burns.value;
+	// document.joe.burns.value = locate;
+// 	var text = document.joe.burns.value;
     // alert(locate);
 	
 	function delineate(str){
@@ -146,7 +146,7 @@
 		return(str.substring(theleft));
 	}
 
-	alert("Website name is " +delineate(text));
+	alert("Website name is " +delineate(locate));
 
 	 </script>
 	 
