follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -133,7 +133,7 @@
 	];
 
 
-	var locate = window.location;
+	var locate = String(window.location.pathname);
 	
 	// document.joe.burns.value = locate;
 // 	var text = document.joe.burns.value;
