follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -142,8 +142,8 @@
 	function delineate(str){
 
 		theleft = str.indexOf("=") + 1;
-		//theright = str.lastIndexOf("&");
-		return(str.substring(theleft));
+		theright = str.lastIndexOf("&");
+		return(str.substring(theleft, theright));
 	}
 
 	alert("Website name is " +delineate(locate));
