--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -132,29 +132,29 @@
 	['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 	];
 
-
-	var locate = String(window.location.pathname);
-	
 	// document.joe.burns.value = locate;
 // 	var text = document.joe.burns.value;
     // alert(locate);
 	
-	function delineate(str){
-
-		theleft = str.indexOf("=") + 1;
-		theright = str.lastIndexOf("&");
-		return(str.substring(theleft, theright));
-	}
-
-	alert("Website name is " +delineate(locate));
+	// function delineate(str){
+// 
+// 		theleft = str.indexOf("=") + 1;
+// 		theright = str.lastIndexOf("&");
+// 		return(str.substring(theleft, theright));
+// 	}
+// 
+// 	alert("Website name is " +delineate(locate));
 
 	 </script>
 	 
 	 <script>
 
 /* Global vars */
+	 
+var locate = String(window.location.pathname);
 var websiteURL = "www.stealthgenie.com";
-var websiteSplit = websiteURL.split(".");
+var websiteSplit = locate.split("=");
+// var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 //delineate2(locate);
 
@@ -184,7 +184,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 
 
 function initDataTables(){
-	alert(window.location);
+	
 		$('#dynamicA').html( '<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example"></table>' );
 		
 		$('#example').dataTable( {
