follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -152,7 +152,7 @@
 /* Global vars */
 	 
 var locate = String(window.location.pathname);
-var websiteURL = "www.stealthgenie.com";
+// var websiteURL = "www.stealthgenie.com";
 var websiteSplit = locate.split("=");
 // var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
@@ -1001,7 +1001,7 @@ rel="stylesheet" type="text/css">
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
 			  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
 			  <p class="lead">
-			  <script>document.write("for " + websiteURL);</script>
+			  <script>document.write("for " + websiteName);</script>
 			  </p>
 		  </div>
 	  </div>
