follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -837,7 +837,7 @@ $(document).ready(function(){
 	
 	/* Global vars */
 	 
-	var locate = String(window.location.pathname);
+	var locate = String(window.location);
 	alert(locate);
 	// var websiteURL = "www.stealthgenie.com";
 	var websiteSplit = locate.split("=");
