follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -140,11 +140,10 @@
 	var websiteSplit = locate.split("=");
 
 	// var websiteSplit = websiteURL.split(".");
-	var websiteName = websiteSplit[1];
-	
-	// alert(websiteName);
-	//delineate2(locate);
-	
+	var websiteNameFull = websiteSplit[1];
+	var websiteSplitTwo = websiteNameFull.split("#");
+	var websiteName = websiteSplitTwo[0];
+
 
 	 </script>
 	 
