--- a/statseo.html
+++ b/statseo.html
@@ -276,7 +276,7 @@ function initDataTables(){
 		null,
 		{ "mData": null , //its null here because history column will contain the mRender
 		"mRender" : function ( data, type, full) {
-			return '<a href="onsite_SQ_drilldown.html#F'+ full[0] + '?=' + websiteName +'">'+full[1]+'</a>';
+			return '<a href="onsite_SQ_drilldown.html' + '?=' + websiteName '#F'+ full[0]  +'">'+full[1]+'</a>';
 		}
 	},
 	null,
@@ -345,7 +345,7 @@ dataTableThree = $('#example4').dataTable( {
 	null,
 	{ "mData": null , //its null here because history column will contain the mRender
 	"mRender" : function ( data, type, full) {
-		return '<a href="offsite_SQ_drilldown.html#F'+ full[0] + '?=' + websiteName +'">'+full[1]+'</a>';
+		return '<a href="offsite_SQ_drilldown.html' + '?=' + websiteName '#F'+ full[0] + '">'+full[1]+'</a>';
 	}
 },
 null,
