follow through to drilldown with URL

--- a/statseo.html
+++ b/statseo.html
@@ -709,7 +709,7 @@ redrawGraph = function(file) {
 		  
 		  <hr>
 		  <p>
-		  <a href="/onsite_SQ_drilldown.html?="+websiteName >Click for onsite drilldown</a>
+		  <a href="/onsite_SQ_drilldown.html?=">Click for onsite drilldown</a>
 		  </p>
 		  <div class="spacer"></div>
 		  <hr>
@@ -841,7 +841,7 @@ redrawGraph = function(file) {
 
 					  <hr>
 					  <p>
-						  <a href="/offsite_SQ_drilldown.html?="+websiteName >Click for offsite drilldown</a>
+						  <a href="/offsite_SQ_drilldown.html?=" >Click for offsite drilldown</a>
 					  </p>
 					  <div class="spacer"></div>
 					  <hr>
