--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -1678,7 +1678,7 @@ rel="stylesheet" type="text/css">
 		  </p>
 		  <div class="spacer"></div>
 		  <hr>
-		  <div onclick="OpenInNewTab('www.bbc.co.uk');">Click to test open in new tab</div>
+		  <div onclick="OpenInNewTab('http://www.bbc.co.uk');">Click to test open in new tab</div>
 		  <hr>
 
 		  <h2>Feature Influence Ranking Table</h2>
