follow through to drilldown with URL

--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -213,7 +213,8 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-			return '<a href="'+ data +'">'+data+'</a>';
+			//return '<a href="'+ data +'">'+data+'</a>';
+			return '<div onclick="OpenInNewTab("'+data+'");">'+data+'</div>';
 		}
 	},
 	{ "mData": "feature_value" },
