--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -214,7 +214,7 @@ function initDataTables(){
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
 			//return '<a href="'+ data +'">'+data+'</a>';
-			return '<div onclick="OpenInNewTab("'+data+'");">'+data+'</div>';
+			return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 		}
 	},
 	{ "mData": "feature_value" },
