--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -206,7 +206,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -235,7 +235,7 @@ function initDataTables(){
 				"aoColumns": [
 				{ "mData": "html_id",
 				"mRender" : function ( data, type, full) {
-					return '<a href="'+ data +'">'+data+'</a>';
+					return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 				}
 			},
 			{ "mData": "feature_value" },
@@ -264,7 +264,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -293,7 +293,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -322,7 +322,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -351,7 +351,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -380,7 +380,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -409,7 +409,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -438,7 +438,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -467,7 +467,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -496,7 +496,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-				return '<a href="'+ data +'">'+data+'</a>';
+				return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 			}
 		},
 		{ "mData": "feature_value" },
@@ -525,7 +525,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-			return '<a href="'+ data +'">'+data+'</a>';
+			return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 		}
 	},
 	{ "mData": "feature_value" },
@@ -554,7 +554,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -583,7 +583,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -612,7 +612,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -641,7 +641,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -670,7 +670,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -699,7 +699,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -728,7 +728,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -757,7 +757,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
@@ -786,7 +786,7 @@ function initDataTables(){
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
-									return '<a href="'+ data +'">'+data+'</a>';
+									return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 														}
 			},
 			{ "mData": "feature_value" },
@@ -815,7 +815,7 @@ function initDataTables(){
 		"aoColumns": [
 		{ "mData": "html_id",
 		"mRender" : function ( data, type, full) {
-								return '<a href="'+ data +'">'+data+'</a>';
+								return '<div onclick="OpenInNewTab(\''+ data +'\');">'+data+'</div>';
 													}
 		},
 		        { "mData": "feature_value" },
