follow through to drilldown with URL

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -132,6 +132,13 @@
 	['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 	];
 
+
+	function OpenInNewTab(url )
+	{
+	  var win=window.open(url, '_blank');
+	  win.focus();
+	}
+
 	/* Global vars */
 	 
 	var locate = String(window.location);
